--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   intl: ^0.18.1
   cloud_firestore: ^4.8.1
+  firebase_auth: ^4.6.3
+  hydrated_bloc: ^9.1.2
+  path_provider: ^2.0.15
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +70,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
